2002-09-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/360:
	* lib/Automake/Location.pm: New file.
	* lib/Automake/Channels.pm (_print_message): Display contexts
	when given an Automake::Location.
	(msg): Clone the location.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Location.pm.
	* tests/comment5.test: Make sure we display `included from' stacks.
	* automake.in: Use Automake::Location.
	(INTERNAL): New constant.
	(file_contents, file_contents_internal, define_variable,
	define_pretty_variable, read_am_file): Take $WHERE as argument.
	Adjust all callers.
	(scan_autoconf_traces) <$where>: Define as a Location, and use
	it instead of $here.
	(macro_define, rule_define): Make sure $WHERE is a location.
	Clone it before updating $var_location or $targets.

2002-09-27  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/mkinstalldirs: Reindent using `sh-indentation: 2'.
	Suggested by Bruno Haible.

	* Makefile.am (fetch, FETCHFILES): Don't fetch install-sh from
	Autoconf.  Automake now has the master copy of install-sh and
	mkinstalldirs.

2002-09-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.7a.

	* NEWS, configure.ac: Version 1.7.

2002-09-25  Art Haas  <ahaas@neosoft.com>

	* automake.texi (Optional, Options, Distributing, ANSI,
	API versioning): Spelling fixes and Texi tweaks.

2002-09-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Check for 'tex'.
	* tests/defs.in: Handle required=tex using configure's result.
	Reported by Patrick Welche.

	* Makefile.am (mdate-sh): Remove.
	* mdate-sh: Delete.
	Suggested by Akim Demaille.

2002-09-25  Tom Tromey  <tromey@redhat.com>

	* NEWS: Mention distuninstallcheck.
	* automake.texi (Dist): Document new macro and target.
	* lib/am/distdir.am (distuninstallcheck_listfiles): New macro.
	(distuninstallcheck): New target.
	(distcheck): Use distuninstallcheck.

2002-09-25  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
