@@ -155,6 +155,7 @@ exdir.test \
 exdir2.test \
 exeext.test \
 exeext2.test \
+exeext3.test \
 exsource.test \
 ext.test \
 ext2.test \
