@@ -1,3 +1,12 @@
+2002-09-29  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/exeext3.test: New file.
+	* tests/Makefile.am (TESTS): Add exeext3.test.
+	* automake.in (%target_name): New hash.
+	(initialize_per_input): Reset %target_name.
+	(rule_define): Fill %target_name, and use it to detect targets
+	which have been registered with key X but really are X$(EXEEXT).
+
 2002-09-28  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	For PR automake/360:
